[tool.poetry]
name = "questradeist"
version = "0.2.2"
description = "A library for interacting with the Questrade API."
authors = ["Chayim I. Kirshen <c@kirshen.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
tox = "^3.20.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39

[testenv]
commands = pytest
"""
